--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -400,7 +400,7 @@ footer .footer-row1 p { font-size: 16px; color: #fff; font-weight: 500;}
 #tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .form-group .form-check { display: inline-block; margin: 0 30px 0 0; padding: 0 30px 0 0; position: relative;cursor: pointer;}
 #tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .form-group .form-check:last-child { margin-right: 0;}
 #tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .form-group .form-check input {position: absolute;right: 0;top: 0;-webkit-appearance: none;border-radius: 3px;background: none;border: 2px solid #FFCD56;box-shadow: none;}
-#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .form-group .form-check input:checked {background: url(../images/checkyellow.svg) no-repeat center / 20px;}
+#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .form-group .form-check input:checked {background: url(../images/checkyellow.svg) no-repeat center / 20px; border-color: transparent;}
 #tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group { margin: 0 0 30px;}
 #tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group .input-group input { height: 52px; padding: 14px;  border: 1px solid #A6A6A6;  color: #A6A6A6;  border-radius: 3px 0 0 3px;}
 #tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group .input-group button { width: 135px; color: #000; font-weight: 600; border-radius: 0 3px 3px 0;}
