--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1679,6 +1679,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 #review-history-modal .modal-content .btn#restart-btn:hover { color: #000; background: none;}
 #review-history-modal .modal-content .modal-body {padding: 0;}
 #review-history-modal .modal-content .table-outer table { min-width: 418px;}
+#review-history-modal .modal-dialog {max-width: 700px;}
 
 
 
