--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1853,6 +1853,18 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month table tbody tr td.fc-day.fc-day-today.fc-daygrid-day { background: none;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month table tbody tr td.fc-day.fc-day-today.fc-daygrid-day .fc-daygrid-day-frame .fc-daygrid-day-events .fc-event {background: #a3a3a3 !important;}
 
+
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.btn.btn-secondary {background: #FBAE1E; border: 1px solid #FBAE1E; opacity: 1; margin: 0 5px;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.status-good.btn { background: #AEEFA0;  border: 1px solid #AEEFA0;  color: #000;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination  button.status-exelent.btn { background: #EFC9C6;  border: 1px solid #EFC9C6; color: #000;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.status-bad.btn { background: #F8EAC6;  border: 1px solid #F8EAC6;  color: #000;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.btn.btn-secondary:hover { background: none; color: #FBAE1E;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.status-good.btn:hover { color: #AEEFA0;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.status-exelent.btn:hover { color: #EFC9C6;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.status-bad.btn:hover { color: #F8EAC6;}
+
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
