--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1863,6 +1863,9 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .exam-container .question-bank-review .lesson #lesson-footer-pagination button.status-exelent.btn:hover { color: #AEEFA0;}
 .exam-container .question-bank-review .lesson #lesson-footer-pagination button.status-bad.btn:hover { color: #EFC9C6;}
 
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.status-good.btn.active { color: #F8EAC6; background: none;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.status-exelent.btn.active { color: #AEEFA0;background: none;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.status-bad.btn.active { color: #EFC9C6;background: none;}
 
 
 @media screen and (max-width:1500px) {
