--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1681,7 +1681,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 #review-history-modal .modal-content .table-outer table { min-width: 418px;}
 #review-history-modal .modal-dialog {max-width: 700px;}
 #review-history-modal .modal-content .table-outer::-webkit-scrollbar { display: none;}
-
+#review-history-modal .modal-content .table-outer table .btn-icons.view_btn { padding: 0; display: inline-block; border: none; background: none; width: 25px; height: 25px;}
 
 
 .set-container .container-wrap {width: 100%;float: none; padding: 50px; margin: 0 auto 0; background: #ffff; box-shadow: 4px 0px 16px 0px #0000000A; border-radius: 10px; max-width: 1320px;}
