--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1154,9 +1154,13 @@ border-radius: 7px;
 }
 .form-progress-ans .form-progress progress{
   width:max-content;
-  min-width:400px; 
   margin: 0 5px;
   height:22px;
+  flex: 1 0 0;
+}
+
+.form-progress-ans .form-progress span {
+  font-size: 16px;
 }
 .form-progress-ans .form-progress progress::-webkit-progress-bar {
   background-color: #ffffff;  
