--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1895,10 +1895,10 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .private-wrap .private-content .card .card-body .forms-inputs .form-check input { width: 23px; height: 23px; border-radius: 3px; margin-left: -30px; border: 2px solid #FBAE1E;}
 .private-wrap .private-content .card .card-body .forms-inputs .form-check label { color: #787878;}
 .private-wrap .private-content .card .card-body .mb-3 { padding: 0 10px;}
-.private-wrap .private-content .card .card-body .btn.btn-secondary {background: #FBAE1E; border: 1px solid #FBAE1E; padding: 8px 20px;}
-.private-wrap .private-content .card .card-body .btn.btn-secondary:hover { color: #FBAE1E; background: none;}
-.private-wrap .private-content .card .card-body button.btn.btn-dark { color: #000000; background: none; border: 1px solid #000000; padding: 8px 20px;}
-.private-wrap .private-content .card .card-body button.btn.btn-dark:hover {background: #000000;color: #ffffff;}
+.private-wrap .private-content .card .card-body button.btn.btn-dark {background: #FBAE1E; border: 1px solid #FBAE1E; padding: 8px 20px;}
+.private-wrap .private-content .card .card-body button.btn.btn-dark:hover { color: #FBAE1E; background: none;}
+.private-wrap .private-content .card .card-body .btn.btn-secondary { color: #000000; background: none; border: 1px solid #000000; padding: 8px 20px;}
+.private-wrap .private-content .card .card-body .btn.btn-secondary:hover {background: #000000;color: #ffffff;}
 
 
 @media screen and (max-width:1500px) {
