--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1892,7 +1892,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .private-wrap .private-content .card .card-body .forms-inputs label {color: #000000; font-size: 20px; margin: 0 0 10px;}
 .private-wrap .private-content .card .card-body .forms-inputs input { border: 1px solid #BCBCBC; height: 50px; border-radius: 10px; color: #787878;}
 .private-wrap .private-content .card .card-body .forms-inputs .form-check { padding-left: 30px;}
-.private-wrap .private-content .card .card-body .forms-inputs .form-check input { width: 23px; height: 23px; border-radius: 3px; margin-left: -30px; border: 2px solid #FBAE1E;}
+.private-wrap .private-content .card .card-body .forms-inputs .form-check input { width: 23px; height: 23px; border-radius: 3px; margin-left: -30px; border: 2px solid #FBAE1E; box-shadow: none;}
 .private-wrap .private-content .card .card-body .forms-inputs .form-check label { color: #787878;}
 .private-wrap .private-content .card .card-body .mb-3 { padding: 0 10px;}
 .private-wrap .private-content .card .card-body button.btn.btn-dark {background: #FBAE1E; border: 1px solid #FBAE1E; padding: 8px 20px;}
