--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1900,7 +1900,8 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .private-wrap .private-content .card .card-body .btn.btn-secondary { color: #000000; background: none; border: 1px solid #000000; padding: 8px 20px;}
 .private-wrap .private-content .card .card-body .btn.btn-secondary:hover {background: #000000;color: #ffffff;}
 .private-wrap .private-content .card .card-body .forms-inputs .form-check input:checked{background: url(../images/checkyellow.svg) no-repeat center / 25px;border: none;}
-
+.private-wrap .private-content .card .card-body .row .col-md-12 {width: 25%;}
+.private-wrap .private-content .card .card-body .row .col-md-12:last-child { width: 100%;}
 
 
 .live-class-section { background: #FFFFFF; margin: 20px 0 0; padding: 40px 30px; border-radius: 20px;}
