--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1925,6 +1925,12 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 }
 
 
+@media screen and (max-width:1399px) {
+.private-wrap .private-content .card .card-body .row .col-md-12 {
+  width: 50%;
+}
+}
+
 @media screen and (max-width:1199px) {
 .lesson .lesson-row-title h3 { font-size: 20px;}
 .lesson .lesson-row-title h4 { font-size: 20px;}
