--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1969,3 +1969,7 @@ nav.navbar { padding-left: 60px;}
 .exam-overview .exam-overview-content { margin: 20px 0 0;}
 
 }
+
+@media screen and (max-width:600px){
+.private-wrap .private-content .card .card-body .row .col-md-12 {width: 100%;}
+}
