--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1695,7 +1695,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .set-container .lesson .lesson-row .lesson-row-sets .sets-item { border: 1px solid #90C3A0; padding: 5px 12px; font-size: 19px;}
 .set-container .lesson .lesson-row .lesson-row-sets .sets-item:hover {background: #D1ECD9;}
 .set-container .lesson .lesson-row:hover { border-color: #FBAE1E;}
-.set-container .option-toggle {margin: 50px 10px;}
+.set-container .option-toggle {margin: 50px 0;}
 .set-container .option-toggle .option-item:has(input:checked) { border-color: #D6C954; background: #F6E7AE;}
 .set-container .option-toggle .option-item { border: 1px solid #BDBDBD; background: #D9D9D9;}
 
