--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1414,6 +1414,7 @@ section.post-section .post-item .post-actions a.post-action-btn span{
 }
 .analytic-exam .analytic-exam-category{
   overflow-y: auto; 
+  height: 75vh !important;
 }
 .analytic-exam .analytic-exam-category .analytic-exam-category-item,.analytic-exam .analytic-exam-category .analytic-exam-category-item .exam-overview ,.analytic-exam .analytic-exam-category .analytic-exam-category-item .exam-overview .exam-overview-content{
   height: auto;
