--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1929,6 +1929,9 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .content_section .card { border: none; border-radius: 10px;}
 
 
+.header_nav .header_wrapp .header_content select.form-control {border: 1px solid #E6E6E6; height: 43px; padding: 8px 22px 8px 8px; background: url(../images/chevron-down.svg) no-repeat center; background-size: 12px; background-position-x: 95%;}
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
