--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1418,8 +1418,8 @@ section.post-section .post-item .post-actions a.post-action-btn span{
 }
 
 .analytic-exam .analytic-exam-category::-webkit-scrollbar {width: 7px;}
-.analytic-exam .analytic-exam-category::-webkit-scrollbar-track { background: #f1f1f1;}
-.analytic-exam .analytic-exam-category::-webkit-scrollbar-thumb { background: #FBAE1E;}
+.analytic-exam .analytic-exam-category::-webkit-scrollbar-track { background: #f1f1f1; border-radius: 6px;}
+.analytic-exam .analytic-exam-category::-webkit-scrollbar-thumb { background: #FBAE1E;border-radius: 6px;}
 
 
 .analytic-exam .analytic-exam-category .analytic-exam-category-item,.analytic-exam .analytic-exam-category .analytic-exam-category-item .exam-overview ,.analytic-exam .analytic-exam-category .analytic-exam-category-item .exam-overview .exam-overview-content{
