--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2049,6 +2049,30 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
   padding: 0 10px;
 }
 
+.header_nav .header_wrapp .header_content .select2-container--default .select2-selection--single .select2-selection__rendered {
+  padding: 8px 22px 8px 10px;
+}
+
+.header_nav .header_wrapp .header_content .select2-container--default .select2-selection--single {
+  border: 1px solid #E6E6E6;
+  height: 43px;
+}
+
+.header_nav .header_wrapp .header_content .select2-container--default .select2-selection--single .select2-selection__rendered .select2-selection__placeholder {
+  color: #000;
+}
+
+.header_nav .header_wrapp .header_content .select2-container--default .select2-selection--single .select2-selection__arrow {
+  top: 50%;
+  transform: translateY(-50%);
+  background: url(../images/chevron-down.svg) no-repeat center;
+  background-size: 12px;
+}
+
+.header_nav .header_wrapp .header_content .select2-container--default .select2-selection--single .select2-selection__arrow b {
+  display: none;
+}
+
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
