--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -122,10 +122,10 @@ section{width: 100%; float: left;}
 .process-wrapp .process-col2 .process-col3 { width: 100%;  overflow: auto; padding: 20px;  display: flex; flex-direction: column; gap: 40px;}
 .process-wrapp .process-col2 .process-col3::-webkit-scrollbar{display: none;} 
 .card-3 { background-color: #fff; border-radius: 20px; flex-direction: column; justify-content: center; align-items: center; width: 600px;    min-height: 600px;
-  margin-bottom: 165px; padding: 50px;  display: flex;  position: sticky;  top: 10%;  box-shadow: 0 0 18px #e6e6e6, 0 0 16px #e6e6e6}
+  margin-bottom: 165px; padding: 50px;  display: flex;  position: sticky;  top: 10%;  box-shadow: 0 0 18px #e5f7ff, 0 0 16px #c6e0eb}
 .card-3._2 { z-index: 1; top: 11.5%}
 .card-3._5 { z-index: 4;  top: 14.5%}
-.card-3._4 { z-index: 3; top: 14.5%;  box-shadow: -9px 0 19px #e6e6e6, 6px 6px 16px #e6e6e6}
+.card-3._4 { z-index: 3; top: 14.5%;  box-shadow: -9px 0 19px #e5f7ff, 6px 6px 16px #c6e0eb}
 .card-3._3 { z-index: 2;  top: 13%}
 .card-title { color: #1d1d1f;  margin-bottom: 20px;  font-size: 40px;  font-weight: 700;  line-height: 1.3}
 .card-number {  color: #1d1d1f;  font-size: 46px;  font-weight: 500;  line-height: 1.2;  position: absolute;  inset: 0% 0% auto auto}
