--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2080,6 +2080,15 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
   margin: 0 10px 0 auto;
 }
 
+.select2-container--open .select2-dropdown--below {
+  border-radius: 10px;
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.select2-container--open .select2-dropdown--below::-webkit-scrollbar {
+  display: none;
+}
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
