--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1988,6 +1988,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .invite-wrap .row .card .card-body .col-md-4 .forms-inputs .select2.select2-container .selection .select2-selection {
   height: 52px;
   border: 1px solid rgba(188, 188, 188, 1);
+  border-radius: 10px;
 }
 
 .invite-wrap .row .card .card-body .col-md-4 .forms-inputs .select2.select2-container .selection .select2-selection .select2-selection__rendered {
