--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2012,6 +2012,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
   height: 52px;
   border: 1px solid rgba(188, 188, 188, 1);
   padding: 11px;
+  border-radius: 10px;
 }
 
 .invite-wrap .row .card .card-body .col-md-4 .forms-inputs label {
