--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2105,6 +2105,11 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
   border-radius: 10px;
 }
 
+.note_section label {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0 0 10px;
+}
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
