--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2389,6 +2389,25 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
   border-radius: 10px;
 }
 
+.payment-wrap .tab-content .amount-form .amout-item .form-group label.file-upload {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  border: 1px solid #BCBCBC;
+  border-radius: 10px;
+}
+
+.payment-wrap .tab-content .amount-form .amout-item .form-group label.file-upload img {
+  padding: 10% 40%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  background: #EFEFEF;
+  border-radius: 10px;
+}
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
